--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,12 @@
     <string name="password_error">Password must be at least 8 charaters long.</string>
     <string name="shopping_list_name_placeholder">Name is not set</string>
     <string name="created_at_placeholder">Creation time not set</string>
-    <string name="last_edited_at_placeholder">Last edit time is not set</string>
+    <string name="last_edited_at_placeholder">Last item added is not set</string>
     <string name="action_share">Share</string>
     <string name="action_delete">Delete</string>
     <string name="shopping_list_created_at">Created at: %1$s</string>
     <string name="created_at">Created at:</string>
-    <string name="last_edited">Last edited:</string>
+    <string name="last_item_added">Last item added:</string>
     <string name="image_view_is_shared_content_description">Image to represent if the list has more than one owner</string>
     <string name="fab_content_desc">Add a new Shopping List</string>
     <string name="action_logout">Logout</string>
@@ -50,7 +50,7 @@
     <string name="title_members">%1$s members</string>
     <string name="title_export">%1$s export</string>
     <string name="title_products">%1$s items</string>
-    <string name="item_member_export_price">$%1$s.%2$s</string>
+    <string name="item_member_export_price">%1$s%2$s%3$s%4$s</string>
     <string name="export_explanation_positive_balance">Can take money out</string>
     <string name="export_explanation_negative_balance">Has to put money in</string>
     <string name="action_select_date_range">Select date range</string>
@@ -67,7 +67,9 @@
     <string name="action_save_export">Save as JSON</string>
     <string name="max_length">Value too long</string>
     <string name="fab_prompt_no_lists_primary">You don\'t have any lists</string>
+    <string name="fab_prompt_no_products_primary">You don\'t have any products</string>
     <string name="fab_prompt_no_lists_secondary">Create or join a shopping list</string>
+    <string name="fab_prompt_no_products_secondary">Create one to start using your new shopping list</string>
     <string name="recycler_view_nothing_here">Nothing here!</string>
     <string name="retry">Retry</string>
     <string name="something_went_wrong">Something went wrong!</string>
@@ -75,4 +77,10 @@
     <string name="no_date_selected_banner">Please choose a date to show shopping list export</string>
     <string name="no_date_selected">No date selected</string>
     <string name="date_format">%1$d.%2$d.%3$d.</string>
+    <string name="product_deleted">Product Deleted</string>
+    <string name="product_bought">Product Bought</string>
+    <string name="alert_dialog_edit">Edit</string>
+    <string name="alert_dialog_purchase">Purchase</string>
+    <string name="alert_dialog_create_product_title">Create product</string>
+    <string name="no_products_yet">no products yet</string>
 </resources>
