--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,5 @@
     <string name="logged_in_email">"Email: %1$s"</string>
     <string name="no_network_available">No network available. \nPlease turn it on to continue using this app.</string>
     <string name="dismiss">Dismiss</string>
+    <string name="list_change_dialog_title">Some changes have been found</string>
 </resources>
